<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <ImageView
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/tec2"
        android:layout_marginTop="50dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/itcr"
            android:id="@+id/textView"
            android:textColor="#0101DF"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sede"
            android:textColor="#5882FA"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/courseName"
            android:textColor="#0101DF"
            android:id="@+id/textView6"
            android:layout_marginTop="22dp"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/semester"
            android:textColor="#5882FA"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Elborated by:"
            android:id="@+id/textView8"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/textView7"
            android:layout_alignEnd="@+id/textView7" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/myInfo"
            android:id="@+id/textView9"
            android:layout_below="@+id/textView8"
            android:layout_alignLeft="@+id/textView6"
            android:layout_alignStart="@+id/textView6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#5882FA"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="First Exam"
            android:id="@+id/textView10"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</LinearLayout>