<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:id="@+id/textView5"
            android:layout_marginLeft="34dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="39dp"
            android:layout_below="@+id/txt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/color"
            android:id="@+id/textView11"
            android:layout_below="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:layout_marginTop="47dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/foot_structure"
            android:id="@+id/textView12"
            android:layout_marginTop="48dp"
            android:layout_below="@+id/textView13"
            android:layout_alignLeft="@+id/textView13"
            android:layout_alignStart="@+id/textView13" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/size"
            android:id="@+id/textView13"
            android:layout_marginTop="54dp"
            android:layout_below="@+id/textView11"
            android:layout_alignLeft="@+id/textView11"
            android:layout_alignStart="@+id/textView11" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="txtName"
            android:id="@+id/txtName"
            android:layout_above="@+id/textView11"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="60dp"
            android:layout_marginEnd="60dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/txtColor"
            android:layout_alignTop="@+id/textView11"
            android:layout_alignLeft="@+id/txtName"
            android:layout_alignStart="@+id/txtName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/txtFootStructure"
            android:layout_alignBottom="@+id/textView12"
            android:layout_alignLeft="@+id/txtColor"
            android:layout_alignStart="@+id/txtColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/txtSize"
            android:layout_alignBottom="@+id/textView13"
            android:layout_alignLeft="@+id/txtFootStructure"
            android:layout_alignStart="@+id/txtFootStructure" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:id="@+id/btnDelete"
            android:layout_marginTop="57dp"
            android:background="#5882FA"
            android:layout_below="@+id/textView12"
            android:layout_alignRight="@+id/txtFootStructure"
            android:layout_alignEnd="@+id/txtFootStructure"
            android:layout_alignLeft="@+id/textView12"
            android:layout_alignStart="@+id/textView12" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/id"
            android:id="@+id/txt"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:layout_marginTop="34dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="ID"
            android:id="@+id/txtID"
            android:layout_alignTop="@+id/txt"
            android:layout_alignRight="@+id/txtName"
            android:layout_alignEnd="@+id/txtName" />
    </RelativeLayout>
</LinearLayout>